# audioreach-audio-utils

./: README.md  repolint.json
.github/workflows/: armor.yml  pkg-build-pr-check.yml  pre_merge_build.yml  qcom-preflight-checks.yml  qli-checkers.yml
audio-log-utils/: Android.mk  audio_dynamic_log.xml
audio-log-utils/inc/: log_utils.h  log_xml_parser.h
audio-log-utils/src/: log_utils.c  log_xml_parser.c
audio-plugins/audio-plugin-headers/interface/: codec_plugin.h  codec_status.h
audio-plugins/dac_plugin/: Makefile.am  configure.ac
audio-plugins/dac_plugin/inc/: dac_plugin.h
audio-plugins/dac_plugin/src/: dac_plugin.c
audio-plugins/mercury_plugin/: configure.ac
audio-plugins/mercury_plugin/inc/: mercury_plugin.h
audio-plugins/mercury_plugin/src/: mercury_plugin.c
audio-plugins/test/dac_mer_test/: dac_mer_testapp.c  dac_mer_testapp.h
audio-route/: Makefile.am  audio_route.c  audioroute.pc.in  configure.ac
audio-route/include/system/: audio.h
audio_memlogger/: Android.mk  Makefile.am  audio_memlogger.pc.in  configure.ac
audio_memlogger/armemlog/inc/: graph_queue.h  kpi_queue.h  mem_logger.h  pal_state_queue.h  spf_reset_queue.h
audio_memlogger/armemlog/parser/: config.xml  enum_replacements.xml  graph_parser.py  header.py  kpi_parser.py  memLoggerParser.py  memLoggerUtils.py  spf_reset_parser.py  state_parser.py
audio_memlogger/armemlog/src/: mem_logger.cpp
ci/: build.sh  files_to_copy.sh  knp_build.sh  pkl_build.sh  rpi_build.sh
debian/: changelog  control
public_headers/: config.yml
